static/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');

.main-header{
    cursor: default;
    color: whitesmoke; 
}
.container{
    width: 80%;
    margin: 0 auto;
}
body{
    margin: 0;
    background: white;
    font-weight: 400;
    font-family: Helvetica,sans-serif;
    line-height: 1.67;
}   
header {
    background-color: #444f57;
    position: fixed;
    width: 100%;
}
header::after {
    content: '';
    display: table;
    clear:both;
}

.main-header {
    cursor: pointer;
}

/* Navbar toggle button mess starts here */
/* Basically show the button when the screen is smaller and when its clicked it changes ands shows the menu */
.navbar-burger {
    color: white;
    cursor: pointer;
    display: block;
    height: 3.75rem;
    position: relative;
    width: 3.75rem;
    margin-left: auto;
}

.navbar-burger span {
    background-color: white;
    display: block;
    height: 1px;
    left: calc(50% - 8px);
    position: absolute;
    transform-origin: center;
    transition-duration: 86ms;
    transition-property: background-color, opacity, transform;
    transition-timing-function: ease-out;
    width: 16px;
}

.navbar-burger span:nth-child(1) {
    top: calc(50% - 6px);
}

.navbar-burger span:nth-child(2) {
    top: calc(50% - 1px);
}

.navbar-burger span:nth-child(3) {
    top: calc(50% + 4px);
}

.navbar-burger:hover {
    color: white;
}

.navbar-burger.is-active span:nth-child(1) {
    transform: translateY(5px) rotate(45deg);
}

.navbar-burger.is-active span:nth-child(2) {
    opacity: 0;
}

.navbar-burger.is-active span:nth-child(3) {
    transform: translateY(-5px) rotate(-45deg);
}

.container {
    display: none;
}

.container.is-active {
    display: block;
}

.container.is-active > nav >.menuList > li {
    margin-left: 1%;
}

.container.is-active > nav > .menuList {
    padding-left: 0;
    padding-bottom: 5%;
}

h1{
    font-size:40px;
    padding-left: 5%;
    letter-spacing: -2px;
    font-family: 'Monserrat','poppins';
    font-weight: 700;
    color: whitesmoke;
    margin:0;
    text-transform: uppercase;
    float: left;
}

@media screen and (min-width: 1325px) {
    h1 {
        padding-left: 150px;
    }
    .navbar-burger {
        display: none;
    }
    .container {
        display: block;
    }
}

nav{
    font-family: 'poppins';
    font-weight: 200;
    font-size: 14px;
    float:right;
}  
nav ul {
    margin: 0;  
    list-style: none;
} 
nav li {
    margin-left: 125px;
    display: inline-block;
    padding-top:25px;
    padding-left: 15px;
    padding-right: 15px;
    position: relative;
}
nav a {
    color: whitesmoke;
    text-decoration: none;
    text-transform: uppercase;
}
nav a:hover {
    color: #000;
}

nav a::before {
    content:'';
    display:block;
    height: 5px;
    width: 100%;
    background-color: whitesmoke;

    position: absolute;
    top:0;
    width:0%;

    transition: all ease-in-out 250ms;
}

nav a:hover::before {
    width:100%
}

p { 
    margin-left: 150px;
    text-align: left;
    display: block;  
    font-size: 20px;
    color: rgb(29, 28, 28);
}

@media screen and (max-width: 1444px) {
    p {
        margin-left:10px;
        text-align: left;
      }
    .projects {
        margin-left:10px;
        text-align: left;
    }
    h2 {
        margin-left:10px;
        text-align: left;
    }
    
}

.projects {
    margin-left: 150px;
}
h2{
    margin-left: 150px;
    display: block;
    text-align: left;
    font-size: 34px;
    font-weight: bold;
    color: rgb(17, 17, 17);
}
p a {
    color: rgb(85, 177, 235);
}
p a:hover{
    color: rgb(85, 177, 235);
    text-decoration: none;
}
p a:visited { 
    color: rgb(85, 177, 235);
    text-decoration: none; 
}

/* When the screen is bigger than 1444px make it 2 columns */
@media screen and (min-width: 1444px) {
    .grid-container {
        justify-content: center;
        display: grid;
        grid-template-rows: repeat(2, 1fr);
        grid-template-columns: auto auto;
        grid-gap: 20px;
        background-color: rgba(255, 255, 255, 0.753);
        padding-right: 150px;
        padding-left: 150px;
      }
    .grid-container > div {
        background-color: rgba(241, 238, 238, 0.877);
        height: 300px;
        width: 500px;
        

    }
    
}


/* Otherwise just a plain grid template (if screen is smaller than 1444px) */
.grid-container {
    display: grid;
}

/* If screen is smaller than 1444px */
@media screen and (max-width: 1444px) {
    .grid-container {
        padding-left: 5%;
        padding-right: 5%;
    }
    h2 {
        text-align: start;
        width: min-content;
        padding-left: 5%;
        padding-right: 5%;
    }
}

.grid-container > div {
    background-color: rgba(241, 238, 238, 0.877);
    text-align: center;
    padding: 1.25rem;
    min-width: 200px;
    margin-bottom: 10px;
    text-align: justify;
    /* make them rounded */
    border-radius: 6px;
}
.grid-container > .projectContent {
position: relative;
height: 100%;
width: 100%;
font-size:16px;

}
.projectTitle {
font-size:22px;
}

.projectDesc {
    font-size:18px;
}
.link {
    color: rgb(85, 177, 235);
    font-size:18px;
}
link:hover{
    color: rgb(85, 177, 235);
    text-decoration: none;
}
link:visited { 
    color: rgb(85, 177, 235);
    text-decoration: none; 
}
.hello {
    font-family:'Poppins';
    padding: 150px 0 100px;
    text-align: center;
    font-size: 80px; 
    height:200px;
}
.blink_me {
    animation: blinker 1s linear infinite;
}
@keyframes blinker {  
    50% { opacity: 0; }
}
#footer {
    background: #343b40;
    padding-left: 150px;
    color: #fff;
    font-size: 18px;
    clear: both;
    position: relative;
    height: 50px;
    margin-top: 0px;
}

